--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     #game-board {
-      background-color: #CCC;
+      background-color:grey;
       width: 100vmin;
       height: 100vmin;
       display: grid;
@@ -26,12 +26,12 @@
     }
 
     .snake {
-      background-color: hsl(200, 100%, 50%);
+      background-color: yellow;
       border: .25vmin solid black;
     }
 
     .food {
-      background-color: hsl(50, 100%, 50%);
+      background-color: red;
       border: .25vmin solid black;
     }
   </style>
