--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     #game-board {
-      background-color:grey;
+      background-color:rgb(253, 243, 243);
       width: 100vmin;
       height: 100vmin;
       display: grid;
@@ -26,12 +26,12 @@
     }
 
     .snake {
-      background-color: yellow;
+      background-color: rgb(248, 245, 76);
       border: .25vmin solid black;
     }
 
     .food {
-      background-color: red;
+      background-color: rgb(0, 153, 255);
       border: .25vmin solid black;
     }
   </style>
