played with the colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     .food {
-      background-color: rgb(248, 245, 76)
+      background-color: rgb(248, 245, 76);
       border: .25vmin solid black;
     }
   </style>
