played with the colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     #game-board {
-      background-color:rgba(250, 234, 6, 0.863);
+      background-color:rgb(255, 251, 138);
       width: 100vmin;
       height: 100vmin;
       display: grid;
